<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nazvanie_avto">

    <TextView
        android:id="@+id/tv_dialog_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_dialog"
        android:textColor="@color/color_text"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/tv_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dialog_vopros"
        android:textColor="@color/color_text"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_margin="10dp"
        android:layout_below="@id/tv_dialog_dialog"/>

    <ImageView
        android:id="@+id/iv_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_dialog"
        android:layout_centerHorizontal="true"
        android:src="@drawable/dialog_rate"
        android:layout_marginVertical="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_dialog"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_yes"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/dialog_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/dialog_no"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>